# SDS-CP032-mlpaygrade

./: .gitignore  README.md  REPORT-ADV.md  REPORT-BEG.md  notebook.py  requirements.txt
submissions/team-members/Chiti-Nkhuwa/: MLPaygrade-EDA.ipynb  README.md
submissions/team-members/Teslim-Adeyanju/: employment_analysis.py  exp_vs_remote_plot_module.py  job_exp_analysis.py  job_exp_analysis_plot_module.py  level_vs_type_plot_module.py  notebook.ipynb  notebook.py  optimized_model.pth  salary_distribution_plot_module.py  simple_model.pth  size_vs_remote_plot.py  solution.ipynb  top_locations_plot_module.py
submissions/team-members/Teslim-Adeyanju/model_checkpoints/: best_model.pth
submissions/team-members/bonnie-yuan/: salary.ipynb
submissions/team-members/hien-nguyen/: .gitignore  EDA&baselines.ipynb  README.md  REPORT-ADV.md  SymbolicRegression_&_DeepLearning.ipynb  app.py  requirements.txt  salaries_prediction.ipynb  yan_notebook.py
submissions/team-members/peter-simsa/: peter-eda-clean.ipynb  peter-etl.ipynb  peter-questoins.ipynb  peter_model.ipynb  salary_executive_etl.py
submissions/team-members/ricardo-rojas/: main.py  pyproject.toml
submissions/team-members/ricardo-rojas/notebooks/: notebook.ipynb
submissions/team-members/ricardo-rojas/reports/: report.html
submissions/team-members/yan-cotta/: DEPLOYMENT_PLAN.md  README.md  mlpaygrade_advanced_track.ipynb  report.md  streamlit_app.py
yan-cotta/: report.md
yan-cotta/outputs/: with_cpi.csv
yan-cotta/scripts/: add_cpi_features.py  add_intervals.py
(+104 files in other folders)
